[package]
name = "adb-show"
version = "0.1.0"
authors = ["Ana Gelez <ana@gelez.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adb = { path = "../adb" }
clap = "2.33"
prettytable-rs = { version = "0.8.0", default-features = false }
